--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.6"
 classifiers = [ "Programming Language :: Python :: 3" ]
 description = "Neware nda binary file reader."
 dependencies = [
-  "pandas",
+  "pandas>=2",
   "polars",
   "pyarrow",
   "importlib-metadata ~= 1.0 ; python_version < '3.8'"
