Require a minimum Pandas version of 2.0.0. This is necessary after changes in PR #10.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires-python = ">=3.6"
 classifiers = [ "Programming Language :: Python :: 3" ]
 description = "Neware nda binary file reader."
 dependencies = [
-  "pandas",
+  "pandas>=2.0.0",
   "importlib-metadata ~= 1.0 ; python_version < '3.8'"
 ]
 
