--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires-python = ">=3.6"
 classifiers = [ "Programming Language :: Python :: 3" ]
 description = "Neware nda binary file reader."
 dependencies = [
-  "pandas>=2.0.0",
+  "pandas",
   "importlib-metadata ~= 1.0 ; python_version < '3.8'"
 ]
 
