--- a/.github/workflows/NewareNDA_pytest.yml
+++ b/.github/workflows/NewareNDA_pytest.yml
@@ -30,3 +30,5 @@ jobs:
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
+        with:
+          coverage-reporter-version: v0.6.15
